--- a/style/_heading.scss
+++ b/style/_heading.scss
@@ -13,11 +13,10 @@
 /* Location */
 .ola-location-notify {
   padding-top: 0.5rem;
-  font-weight: 100;
-  font-size: 14px;
 
   .ola-link-geo {
-    margin-left: 1rem;;
+    margin-left: 1rem;
+    vertical-align: baseline;
   }
   .ola-link-geo-active {
     
