--- a/style/_pill.scss
+++ b/style/_pill.scss
@@ -4,6 +4,5 @@
   padding: $pill-padding;
   color: $pill-color;
   display: inline-block;
-  margin-right: 0.5rem;
-  font-size: $pill-font-size;
+  margin: 0 4px 4px 0;
 }
