--- a/style/_variables.scss
+++ b/style/_variables.scss
@@ -22,7 +22,7 @@ $link-hover-color: #1A237E !default;
 /* Primary button */
 $button-primary-background: #3F51B5 !default;
 $button-primary-color: white;
-$button-padding: 0.6rem 1.5rem;
+$button-padding: 10px 24px;
 $button-border-radius: 5px;
 
 /* Icon button default width */
