--- a/style/_mixins.scss
+++ b/style/_mixins.scss
@@ -103,6 +103,7 @@ $breakpoints: (
     cursor: pointer;
     padding: 0;
     margin: 0;
+    font-weight: normal;
   }
   &:hover {
     text-decoration: underline;
