--- a/style/_spelling.scss
+++ b/style/_spelling.scss
@@ -12,3 +12,10 @@
 .ola-term-suggestion-instead {
   font-size: 0.9375rem;
 }
+
+/**
+ * Spell links
+ */
+.ola-spell-links {
+  vertical-align: baseline;
+}
