--- a/style/_form.scss
+++ b/style/_form.scss
@@ -27,14 +27,14 @@
 .ola-checkbox {
   display: flex;
   line-height: 1.4;
-  align-items: center;
+  align-items: top;
   padding: $facet-padding;
   margin: 0;
   font-weight: normal;
   cursor: pointer;
 
   input {
-    margin: 0;
+    margin: 3px 0 0 0;
   }
 
   .ola-search-facet-name {
@@ -44,4 +44,7 @@
 
   .ola-search-facet-name {
     flex: 1;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
   }
