--- a/style/_histogram.scss
+++ b/style/_histogram.scss
@@ -5,6 +5,8 @@
   display: flex;
   align-items: flex-end;
   border-bottom: 1px #ccc solid;
+  margin-right: 8px;
+  margin-left: 8px;
 }
 
 .ola-histogram-bar {
