--- a/style/_slider.scss
+++ b/style/_slider.scss
@@ -89,10 +89,10 @@ html:not([dir="rtl"]) .noUi-horizontal .noUi-origin {
   width: 28px;
   height: 34px;
   left: -6px;
-  top: -17px;
+  top: -13px;
 }
 html:not([dir="rtl"]) .noUi-horizontal .noUi-handle {
-  right: -17px;
+  right: -13px;
   left: auto;
 }
 /* Styling;
@@ -288,7 +288,7 @@ html:not([dir="rtl"]) .noUi-horizontal .noUi-handle {
   */
  
  .ola-slider{
-     padding: 3em 1em 1em 1em;
+     padding: 3em 8px 1em 8px;
  }
  
  .noUi-tooltip {
