--- a/style/_answer.scss
+++ b/style/_answer.scss
@@ -1,3 +1,115 @@
+/**
+ * Answer card item
+ */
+
+.ola-answer-cards {
+  
+}
+
+  /**
+   * Wraapper
+   */
+  .ola-answer-card-wrapper {
+    padding: 1em;
+    box-shadow: $small-box-shadow;
+    border-radius: 5px;
+  }
+
+  /**
+   * Title
+   */
+  .ola-answer-title {
+    margin: 0 0 8px 0;
+  }
+
+/**
+ * Answer list
+ */
+.ola-answer-list-items {
+  display: flex;
+
+  > .ola-answer-card {
+    width: 33.333%;
+  }
+}
+
+/**
+ * Source and footnote
+ */
+.ola-answer-source,
+.ola-answer-footnote {
+  font-size: 14px;  
+}
+
+  /**
+   * Source link
+   */
+  .ola-answer-source-link {
+    text-decoration: underline;
+  }
+
+
+/**
+ * Fields
+ */
+.ola-answer-field {
+}
+  /**
+   * Label
+   */
+  .ola-answer-field-label {
+    font-weight: bold;
+    padding-top: 8px;
+  }
+  /**
+   * Value
+   */
+  .ola-answer-field-value {
+    @extend %nobreak;
+  }
+
+/**
+ * Table
+ */
+.ola-answer-table {
+  background-color: white;
+  border-top: none;
+  margin: 0 0 16px 0;
+  width: 100%;
+  border-collapse: collapse;
+
+  th, td {
+    padding: 8px;
+    text-align: left;
+  }
+
+  th {
+    font-weight: bold;
+    border-bottom: 2px #ddd solid;
+  }
+
+  td {
+    border-bottom: 1px solid #ddd;
+  }
+}
+
+/**
+ * Linechart
+ */
+.ola-answer-linechart {
+  height: 300px;
+  margin: 1em;
+}
+
+
+/**
+ * Google map
+ */
+.ola-answer-gmap {
+  height: 300px;
+}
+
+
 /* Tokens */
 .ola-answer-slots {
   padding-top: 8px;
@@ -39,152 +151,3 @@
     margin-top: 6px;
   }
 }
-
-/**
- * Answer title
- */
-.ola-answer-title {
-  margin-top: 0;
-  font-size: 20px;
-  margin-bottom: 0;
-  color: #333;
-  background-color: #03ade0;
-}
-
-.ola-answer-subtitle {
-  font-size: 14px;
-  opacity: 0.8;
-}
-
-.ola-answer-table-wrapper, .ola-answer-description {
-  overflow: auto;
-  background-color: white;
-  padding: 1em;
-}
-.ola-answer-table {
-  background-color: white;
-  border-top: none;
-  margin: 0;
-}
-
-.ola-answer-description {
-  font-size: 20px;
-  color: #666;
-}
-
-
-
-.ola-answer-table-caption, .ola-answer-title {
-  background-color: #03ade0;
-  color: white;
-  padding: 0.8em 1em;
-  margin: 0;
-  border-bottom: 2px solid #666;
-}
-
-.ola-answer-item {
-  padding-bottom: 1.5em;
-}
-
-/* Table wrapper */
-.ola-answer-table-detail {
-  padding: 1rem;
-}
-
-/* Footnote */
-.ola-answer-footnote {
-  font-size: 12px;
-  padding: 1rem 0 0 0;
-}
-
-/**
- * Source
- */
-
-.ola-answer-source {
-  font-size: 12px;
-  max-width: 70%;
-  padding: 1em 0;
-  > a {
-    text-decoration: underline;
-  }
-}
-
-/**
- * Button
- */
-
-.ola-answer-link-more {
-  background: #002569;
-  color: white;
-  text-transform: none;
-  border: none;
-  padding: 0.8rem 1rem;
-  font-size: 16px;
-  margin: 0;
-  min-width: 120px;
-  text-align: center;
-  margin-bottom: 1em;
-}
-
-
-/**
- * List answer
- * Remove shadow from .ola-answer
- */
-
-.ola-answer-template-list {
-  box-shadow: none;
-}
-
-  /**
-   * List
-   */
-  .ola-answer-list-items {
-    display: flex;
-    flex-wrap: wrap;
-
-    .ola-answer-item {
-      width: 33.333%;
-    }
-
-    .ola-answer-item-wrapper {
-      box-shadow: $small-box-shadow;
-      margin-right: 1em;
-      min-height: 100%;
-      padding: 1em;
-    }
-  }  
-
-
-
-/**
- * Rows
- */
-
-.ola-answer-row {
-  @include flexbox;
-  padding: 2px 0;
-  font-size: 14px;
-  -ms-word-break: break-all;
-   word-break: break-all;
-
-   /* Non standard for WebKit */
-   word-break: break-word;
-
-  -webkit-hyphens: auto;
-  -moz-hyphens: auto;
-      hyphens: auto;
-}
-  .ola-answer-keyvalue {
-    padding: 1em 0;
-  }
-
-  .ola-answer-label {
-    font-weight: 500;
-    min-width: 120px;
-    &:after {
-      content: ": "
-    }
-  }
-
