--- a/style/_contenteditable.scss
+++ b/style/_contenteditable.scss
@@ -10,6 +10,7 @@
   position: relative;
   z-index: 1;
   font-family: inherit;
+  border: none;
   &:focus {
     outline: none;
     border: none;
