--- a/style/_pagination.scss
+++ b/style/_pagination.scss
@@ -66,3 +66,15 @@
       margin-left: 0.25rem;  
     }
   }
+
+
+/**
+ * Per page
+ */
+.ola-per-page {
+  font-size: 14px;
+}
+
+  .ola-per-page-label {
+    margin-right: 8px;
+  }
