--- a/style/_sort.scss
+++ b/style/_sort.scss
@@ -20,6 +20,9 @@
  */
 .ola-sort-select {
   appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  -ms-appearance: none;
   border: none;
   padding: 8px 8px;
   padding-right: 50px;
