--- a/style/_answer_bk.scss
+++ b/style/_answer_bk.scss
@@ -74,13 +74,13 @@
 
 
 
-.ola-answer-table-caption, .ola-answer-title {
-  background-color: #03ade0;
-  color: white;
-  padding: 0.8em 1em;
-  margin: 0;
-  border-bottom: 2px solid #666;
-}
+// .ola-answer-table-caption, .ola-answer-title {
+//   background-color: #03ade0;
+//   color: white;
+//   padding: 0.8em 1em;
+//   margin: 0;
+//   border-bottom: 2px solid #666;
+// }
 
 .ola-answer-item {
   padding-bottom: 1.5em;
