--- a/style/_answer.scss
+++ b/style/_answer.scss
@@ -11,7 +11,8 @@
    */
   .ola-answer-card-wrapper {
     padding: 1em;
-    box-shadow: $small-box-shadow;
+    background: white;
+    box-shadow: $sharp-box-shadow;
     border-radius: 5px;
   }
 
@@ -20,6 +21,44 @@
    */
   .ola-answer-title {
     margin: 0 0 8px 0;
+    font-size: 1rem;
+    font-weight: 700;
+  }
+
+  /**
+   * Subtitle
+   */
+  .ola-answer-subtitle {
+    margin: 0 0 16px 0;
+  }
+
+  /**
+   * Image
+   */
+  .ola-img-card {
+    max-height: 300px;
+    margin-bottom: 8px;
+    display: block;
+  }
+
+  /**
+   * Button wrapper
+   */
+  .ola-answer-buttons {
+    padding-top: 8px;
+  }
+
+  /**
+   * Button
+   */
+  .ola-answer-button {
+    @extend .ola-btn-primary;
+    width: 100%;
+    margin: 0 0 16px 0;
+    @include media (desktop) {
+      margin: 0 16px 0 0;
+      width: auto;
+    }
   }
 
 /**
