--- a/style/_fields.scss
+++ b/style/_fields.scss
@@ -25,6 +25,16 @@
   }
 }
 
+  /**
+   * Caption
+   */
+  .ola-field-img-caption {
+    font-style: italic;
+    font-size: 14px;
+    padding: 8px;
+    text-align: left;
+  }
+
 /**
  * Image
  */
