--- a/style/_tags.scss
+++ b/style/_tags.scss
@@ -104,3 +104,45 @@
   .ola-facet-tags-group {
     background: #eee;
   }
+
+/* Tokens */
+.ola-answer-slots {
+  padding-top: 8px;
+  // padding: 0.5rem 0;
+}
+
+/* Token */
+.ola-btn-slot-add {
+  &, &:hover, &:focus, &:active {
+    background: darken(#eef7fd, 10%);
+    padding: 10px 12px;    
+    border-radius: $base-border-radius;
+    margin: 6px 6px 0 0;
+    color: #666;
+    padding-right: 30px;
+    position: relative;
+    border: none;
+  }
+
+  .ola-icon {
+    position: absolute;
+    right: 0;
+    top: 50%;
+    margin-top: -8px;
+    bottom: 0;
+    vertical-align: middle;
+    width: 30px;
+    text-align: center;
+  }
+}
+
+/* Answer token text */
+.ola-answer-slots-text {
+  display: block;
+  @include media (tablet) {
+    display: inline-block;
+    margin-right: 6px;
+    vertical-align: middle;
+    margin-top: 6px;
+  }
+}
