Added answer carousel and list

--- a/style/_answer.scss
+++ b/style/_answer.scss
@@ -66,13 +66,13 @@
  * Answer list
  */
 .ola-answer-list-items {
-  display: flex;
+  // display: flex;
 
-  > .ola-answer-card {
-    width: 33.333%;
-    padding-right: 14px;
-    padding-bottom: 14px;
-  }
+  // > .ola-answer-card {
+  //   width: 33.333%;
+  //   padding-right: 14px;
+  //   padding-bottom: 14px;
+  // }
 }
 
 /**
