Updated swipeable and answer cards

--- a/style/_buttons.scss
+++ b/style/_buttons.scss
@@ -217,3 +217,10 @@
   @extend .ola-icon-button;
   height: 100%;
 }
+
+/**
+ * Button more
+ */
+.ola-answer-link-more {
+  @extend .ola-btn-primary;
+}
