--- a/style/_snippet.scss
+++ b/style/_snippet.scss
@@ -63,7 +63,7 @@
 }
 
 /* Static answer snippet */
-.ola-snippet-static-answer {
+.ola-snippet-static-answer .ola-snippet-inner {
   background: #ffc;
   padding: 1rem;
 }
