--- a/style/_swipeable.scss
+++ b/style/_swipeable.scss
@@ -8,11 +8,11 @@
   overflow-y: hidden;
   transform: translate3d(0,0,0);
   position: relative;
+  padding-bottom: 8px; /* Push the scrollbar */
 }
 
 .ola-swipeable-flow::-webkit-scrollbar {
   display: none;
-  background-color: transparent;
 }
 
   .ola-swipeable-row {
@@ -23,8 +23,13 @@
   }
 
   .ola-swipeable-item {
-    flex: 1 1;
+    flex: 1 1 auto;
+    display: flex;
     padding: 8px 16px 8px 0;
+
+    &:last-child {
+      padding-right: 0;
+    }
   }
 
   /**
@@ -32,7 +37,9 @@
    */
   .ola-swipeable-item-inner {
     // overflow: hidden;
-    height: 100%;
+    // height: 100%;
+    display: flex;
+    flex: 1;
 
     img {
       max-width: 100%;
@@ -49,17 +56,21 @@
   position: absolute;
   right: 8px;
   top: 50%;
-  margin-top: -22px;
+  margin-top: -20px;
   bottom: 0;
-  width: 45px;
-  height: 45px;
+  width: 40px;
+  min-width: 40px;
+  height: 40px;
   color: white;  
   border-radius: 50%;
   opacity: 0;
   z-index: 1;
+  transition: all 0.2s ease-in;
 
   .ola-swipeable:hover & {
     opacity: 1;
+    background: rgba(0,0,0,0.5);
+    color: white;
   }
 
   &, &:focus {
@@ -67,9 +78,8 @@
   }
 
   &:focus, &:active, &:hover {
-    background: rgba(0,0,0,0.5);
-    color: white;
-  }
+    
+  }  
 
   @include media (desktop) {
     display: block;
@@ -98,6 +108,7 @@
     padding: 5px;
     border-radius: 50%;
     box-shadow: $small-box-shadow;
+    margin: 3px;
     background: white;
   }  
 }
