Added facet heirarchy css

--- a/style/_fields.scss
+++ b/style/_fields.scss
@@ -165,6 +165,13 @@ a.ola-field-url {
     margin-right: 0.5rem;
   }
 
+  /**
+   * Content
+   */
+  .ola-flex-content {
+    flex: 1;
+  }
+
 /**
  * Small fields
  */
