--- a/style/core.admin.scss
+++ b/style/core.admin.scss
@@ -24,6 +24,8 @@
 @import 'histogram';
 @import 'answer';
 
+@import 'modal';
+
 @import 'select';
 @import 'swipeable';
 @import 'facet_hierarchical';
