--- a/style/_form.scss
+++ b/style/_form.scss
@@ -27,7 +27,7 @@
 .ola-checkbox {
   display: flex;
   line-height: 1.4;
-  align-items: top;
+  align-items: center;
   padding: $facet-padding;
   margin: 0;
   font-weight: normal;
