--- a/style/_variables.scss
+++ b/style/_variables.scss
@@ -9,6 +9,9 @@ $base-border-radius: 3px;
 $small-box-shadow: 0 0px 3px 0 rgba(0,0,0,.3);
 $sharp-box-shadow: 0 0 3px 1px rgba(0,0,0,.3);
 
+$modal-overlay-zindex: 5 !default;
+// $chatbot-zindex: 9999 !default;
+
 /* Brand */
 $brand-color: #3F51B5 !default;
 
