--- a/style/_animation.scss
+++ b/style/_animation.scss
@@ -6,3 +6,14 @@
     opacity: 1;
   }
 }
+
+@keyframes slideUpFade {
+  0% {
+    transform: translate3d(0, 2px, 0);
+    opacity: 0;
+  }
+  100% {
+    transform: translate3d(0, 0, 0);
+    opacity: 1;
+  }
+}
