--- a/style/_fields.scss
+++ b/style/_fields.scss
@@ -252,3 +252,10 @@ a.ola-field-url {
   .ola-faux-checkbox-disabled .ola-checkbox-icon {    
     border-color: #cbd0d1;
   }
+
+/**
+ * Break long lines of ola-field-value
+ */
+.ola-field-value {
+  @extend %nobreak;
+}
