--- a/style/_fields.scss
+++ b/style/_fields.scss
@@ -25,6 +25,13 @@ $image-height: 150px;
     text-align: left;
   }
 
+  /**
+   * Image link
+   */
+  .ola-img-link {
+    cursor: pointer;
+  }
+
 /**
  * Image
  */
