--- a/style/_answer.scss
+++ b/style/_answer.scss
@@ -19,7 +19,8 @@
    * Wrapper
    */
   .ola-answer-card-wrapper,
-  .ola-answer-wordmap {
+  .ola-answer-wordmap,
+  .ola-answer-carousel-item-wrapper {
     padding: 1em;
     background: white;
     box-shadow: $sharp-box-shadow;
@@ -176,7 +177,29 @@
  * Answer header
  */
 .ola-answer-header {
+  padding: 8px 0;
+  flex: 1;
+  &:first-child {
+    padding-top: 0;
+  }
+  &:last-child {
+    padding-top: 0;
+  }
   .ola-field-title {
     padding: 0;
+  }
+}
+
+/**
+ * Answer map
+ */
+.ola-answer-map {
+  .ola-field-directions {
+    padding: 0;    
+  }
+  .ola-btn-directions {
+    padding: 12px 16px;
+    background: white;
+    border-radius: 0 0 5px 5px;
   }
 }
