--- a/style/_swipeable.scss
+++ b/style/_swipeable.scss
@@ -74,6 +74,7 @@
   opacity: 0;
   z-index: 1;
   transition: opacity 0.2s ease-in;
+  line-height: 1;
 
   .ola-swipeable:hover & {
     opacity: 1;
