--- a/style/_share.scss
+++ b/style/_share.scss
@@ -22,6 +22,7 @@
   /* Link */
   .ola-drop-link {
     border: none;
+    background: none;
     border-right: 1px $base-border-color solid;
     padding: 10px 12px;
     cursor: pointer;
