--- a/style/_fields.scss
+++ b/style/_fields.scss
@@ -130,7 +130,7 @@ $image-height: 150px;
 }
 
 /* URL */
-a.ola-field-url {
+.ola-field-url {
   font-size: 13px;
   color: $base-grey-color;
   display: block;
