--- a/style/_heading.scss
+++ b/style/_heading.scss
@@ -1,8 +1,10 @@
 .ola-search-heading-container {
   border-bottom: 2px solid #e5e5e5;
-  padding: 0.5rem 0 1rem 0;
+  padding: 0rem 0 1rem 0;
   margin: 0 0 1rem 0;
   min-height: $button-default-height + 20px;
+  display: flex;
+  align-items: flex-end;
 
   @include media (tablet) {
     padding-top: 0;
