--- a/style/_sidebar.scss
+++ b/style/_sidebar.scss
@@ -86,13 +86,13 @@
 
 /* Open Filter */
 .ola-link-open-filter {
-  float: right;
+  // float: right;
   border: 1px $base-grey-color solid;
   background: none;
   text-transform: uppercase;
   text-align: center;
   position: relative;
-  margin: 5px 0 0 5px;
+  margin: 0 0 0 5px;
   height: auto;
   min-height: $button-default-height;
 
